<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aw_ue150</name>
  <version>0.0.1</version>
  <description>ROS 2 driver for the AW-UE150 cameras.</description>
  <maintainer email="yang.7.li@kcl.ac.uk">Yang-Li86</maintainer>
  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>gst_pipeline</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
